<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ZBlack"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/ZWhite"
            android:textSize="26sp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/home_title"
            android:background="@drawable/z_home_title"
            android:layout_weight="1"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclerview"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="8"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:id="@+id/cityText"
                android:hint="@string/home_city_hint"
                android:textColor="@color/ZBlack"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:fontFamily="sans-serif"
                android:background="@drawable/z_edit_text"
                android:textColorHint="@color/ZBlack"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/addCityButton"
                android:text="@string/home_add_city"
                android:fontFamily="sans-serif-black"
                android:textSize="14sp"
                android:textAlignment="center"
                android:textColor="@color/ZWhite"
                android:background="@drawable/z_button_filled"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>